 * [Added ability to perform Relational query without getting related models](/doc/guide/database.arr#performing-relational-query-without-getting-related-models)
 * [Added transaction support for the DB migration feature](/doc/guide/database.migration#transactional-migrations)

 Version 1.1.6
-------------
 * [Added query builder](/doc/guide/database.query-builder)
 * [Added database migration](/doc/guide/database.migration)
 * [Best MVC Practices](/doc/guide/basics.best-practices)
 * [Added support for using anonymous parameters and global options in console commands](/doc/guide/topics.console)

Version 1.1.5
-------------

 * [Added support for console command actions and parameter binding](/doc/guide/topics.console)
 * [Added support for autoloading namespaced classes](/doc/guide/basics.namespace)
 * [Added support for theming widget views](/doc/guide/topics.theming#theming-widget-views)

Version 1.1.4
-------------

 * [Added support for automatic action parameter binding](/doc/guide/basics.controller#action-parameter-binding)

Version 1.1.3
-------------

 * [Added support to configure widget default values in application configuration](/doc/guide/topics.theming#customizing-widgets-globally)

Version 1.1.2
-------------

 * [Added a Web-based code generation tool called Gii](/doc/guide/topics.gii)

Version 1.1.1
-------------

 * Added CActiveForm which simplifies writing form-related code and supports
 seamless and consistent validation on both client and server sides.

 * Refactored the code generated by the yiic tool. In particular, the skeleton
 application is now generated with multiple layouts; the operation menu is
 reorganized for CRUD pages; added search and filtering feature to the admin
 page generated by crud command; used CActiveForm to render a form.

 * [Added support to allow defining global yiic commands](/doc/guide/topics.console)

Version 1.1.0
-------------

 * [Added support for writing unit and functional tests](/doc/guide/test.overview)
