@@ -297,10 +297,35 @@ class CController extends CBaseController
 		$this->_action=$action;
 		if($this->beforeAction($action))
 		{
-			$action->run();
-			$this->afterAction($action);
+			if($action->runWithParams($this->getActionParams())===false)
+				$this->invalidActionParams($action);
+			else
+				$this->afterAction($action);
 		}
 		$this->_action=$priorAction;
+	}
+
+	/**
+	 * Returns the request parameters that will be used for action parameter binding.
+	 * By default, this method will return $_GET. You may override this method if you
+	 * want to use other request parameters (e.g. $_GET+$_POST).
+	 * @return array the request parameters to be used for action parameter binding
+	 * @since 1.1.7
+	 */
+	public function getActionParams()
+	{
+		return $_GET;
+	}
+
+	/**
+	 * This method is invoked when the request parameters do not satisfy the requirement of the specified action.
+	 * The default implementation will throw a 400 HTTP exception.
+	 * @pararm CAction $action the action being executed
+	 * @since 1.1.7
+	 */
+	public function invalidActionParams($action)
+	{
+		throw new CHttpException(400,Yii::t('yii','Your request is invalid.'));
 	}
 
 	/**
@@ -379,20 +404,14 @@ class CController extends CBaseController
 		if($actionID==='')
 			$actionID=$this->defaultAction;
 		if(method_exists($this,'action'.$actionID) && strcasecmp($actionID,'s')) // we have actions method
-			return $this->createInlineAction($actionID);
+			return new CInlineAction($this,$actionID);
 		else
-			return $this->createActionFromMap($this->actions(),$actionID,$actionID);
-	}
-
-	/**
-	 * Creates the action to represent an inline controller action.
-	 * @param string $actionID the action ID
-	 * @return CInlineAction the inline action instance
-	 * @since 1.1.7
-	 */
-	protected function createInlineAction($actionID)
-	{
-		return new CInlineAction($this,$actionID);
+		{
+			$action=$this->createActionFromMap($this->actions(),$actionID,$actionID);
+			if($action!==null && !method_exists($action,'run'))
+				throw new CException(Yii::t('yii', 'Action class {class} must implement the "run" method.', array('{class}'=>get_class($action))));
+			return $action;
+		}
 	}
 
 	/**
