@@ -55,4 +55,53 @@ abstract class CAction extends CComponent implements IAction
 	{
 		return $this->_id;
 	}
+
+	/**
+	 * Runs the action with the supplied request parameters.
+	 * This method is internally called by {@link CController::runAction()}.
+	 * @param array $params the request parameters (name=>value)
+	 * @return boolean whether the request parameters are valid
+	 * @since 1.1.7
+	 */
+	public function runWithParams($params)
+	{
+		$method=new ReflectionMethod($this, 'run');
+		if($method->getNumberOfParameters()>0)
+			return $this->runWithParamsInternal($this, $method, $params);
+		else
+			return $this->run();
+	}
+
+	/**
+	 * Executes a method of an object with the supplied named parameters.
+	 * This method is internally used.
+	 * @param mixed $object the object whose method is to be executed
+	 * @param ReflectionMethod $method the method reflection
+	 * @param array $params the named parameters
+	 * @return boolean whether the named parameters are valid
+	 * @since 1.1.7
+	 */
+	protected function runWithParamsInternal($object, $method, $params)
+	{
+		$ps=array();
+		foreach($method->getParameters() as $i=>$param)
+		{
+			$name=$param->getName();
+			if(isset($params[$name]))
+			{
+				if($param->isArray())
+					$ps[]=is_array($params[$name]) ? $params[$name] : array($params[$name]);
+				else if(!is_array($params[$name]))
+					$ps[]=$params[$name];
+				else
+					return false;
+			}
+			else if($param->isDefaultValueAvailable())
+				$ps[]=$param->getDefaultValue();
+			else
+				return false;
+		}
+		$method->invokeArgs($object,$ps);
+		return true;
+	}
 }
